test/files/neg/t10662/px_2.scala

import reflect.ClassTag

package p {

  class X {
    override def toString() = "p.X"
  }

  package q {
    object Test {
      def f = implicitly[ClassTag[X]]   // ambiguous
    }
  }

  object Test {
    def main(args: Array[String]) = println {
      p.q.Test.f
    }
  }
}
